--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ section {
 
 .history {
     
-    height: 40%;
+    height: 55%;
     
 }
 
@@ -100,12 +100,19 @@ p {
 }
 
 .history-item {
+    color: white;
     cursor: pointer;
     font-size: 20px;
+    background-color: rgb(119, 15, 15);
+    margin: 5px;
+    border-radius: 5px;
+    padding: 5px 10px;
+    text-align: center;
 }
 
 .history-item:hover {
-    color: rgb(195, 15, 15);
+    background-color: rgba(195, 15, 15, 0.6);
+    
 }
 
 
